--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ import "sanitize.css";
 import "sanitize.css/forms.css";
 import "sanitize.css/typography.css";
 import "@styles/styles.scss";
+import "@custom/custom.scss";
 
 export interface Props {
     title?: string;
