Appease typescript errors

--- a/src/components/calendar/calendar.astro
+++ b/src/components/calendar/calendar.astro
@@ -322,7 +322,7 @@ const calendarOptions = {
             uid: e.id + "@" + source,
         };
 
-        createEvent(event, (error, value) => {
+        createEvent?.(event, (error: any, value: any) => {
             if (error) {
                 console.log(error);
                 return;
