Icon component use uppercase

--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -24,7 +24,7 @@ const content = await replaceCmsEmbeds(Astro.props.content);
 var substitutions = {
     Accordion,
     blockquote: Blockquote,
-    icon: Icon,
+    Icon,
     Newsletter: Mailbuild,
     Facebook,
     Social,
