--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -34,7 +34,7 @@ var substitutions = {
     img: AsideImage,
     Counter,
 };
-var md;
+var md: MarkdownIt | undefined;
 
 // @ts-ignore
 if (ENV_BOOKSHOP_LIVE) {
