--- a/src/components/richtext/richtext.astro
+++ b/src/components/richtext/richtext.astro
@@ -1,6 +1,5 @@
 ---
 import Section from "@layouts/Section.astro";
-import Markdown from "@shared/Markdown.astro";
 
 export interface Props {
     content: string;
@@ -8,36 +7,6 @@ export interface Props {
     classes?: any;
     style?: Record<string, string>;
 }
-
-const { content } = Astro.props;
 ---
 
-<Section component="richtext" {...Astro.props}>
-    <div>
-        <Markdown {content} />
-    </div>
-</Section>
-
-<style>
-    section {
-        position: relative;
-        /* display: flex;
-        flex-direction: column;
-        align-items: flex-start; */
-    }
-</style>
-
-<style is:global>
-    .rich-text img {
-        max-width: 100%;
-        margin-bottom: 2rem;
-        max-width: 40%;
-    }
-
-    .richtext {
-        p {
-            line-height: 1.8;
-            margin-bottom: 1.6rem;
-        }
-    }
-</style>
+<Section component="richtext" {...Astro.props} />
