--- a/src/components/file/file.astro
+++ b/src/components/file/file.astro
@@ -7,7 +7,8 @@ import Image from "@shared/Image.astro";
 import Icon from "@shared/icon.astro";
 // import type { PDFiumRenderOptions } from "@hyzyla/pdfium/dist/types.js";
 import { formatBytes } from "@mws-astro/util";
-import { getPDFThumbnail, getFilesize, resolvePath } from "@mws-astro/filesystem";
+import { getFilesize, resolvePath } from "@mws-astro/filesystem";
+import { getPDFThumbnail } from "@mws-astro/pdf";
 
 export interface Props {
     files?: [
