--- a/src/components/flipbook/flipbook.astro
+++ b/src/components/flipbook/flipbook.astro
@@ -3,7 +3,8 @@ import Section from "@layouts/Section.astro";
 import Icon from "@shared/icon.astro";
 import Image from "@shared/Image.astro";
 import { formatBytes } from "@mws-astro/util";
-import { getPDFThumbnail, getFilesize } from "@mws-astro/filesystem";
+import { getFilesize } from "@mws-astro/filesystem";
+import { getPDFThumbnail } from "@mws-astro/pdf";
 
 export interface Props {
   title?: string;
