Add linkedin social icon

--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -13,6 +13,7 @@ const icons: Record<string, string> = {
     twitter: "fa6-brands:square-x-twitter",
     facebook: "fa6-brands:square-facebook",
     instagram: "fa6-brands:square-instagram",
+    linkedin: "fa6-brands:linkedin",
     whatsapp: "fa6-brands:square-whatsapp",
     telephone: "fa6-solid:square-phone",
     email: "fa6-solid:square-envelope",
