Footer swap website to site by.

--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -43,7 +43,7 @@ const Override = (await Object.values(import.meta.glob("/src/components/**/Foote
           )
       }
       <p class="brand">
-          Website by <a
+          Site by <a
               href="https://www.millstream.com.au/"
               target="_blank"
               rel="noopener">Millstream Creative</a
