--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -53,7 +53,7 @@ function formatDate(date: Date) {
     {
         thumbnail && (
             <div class="card-thumbnail">
-                <Image image={thumbnail} width={512} />
+                <Image image={thumbnail} width={512} densities={null} quality={"mid"} />
             </div>
         )
     }
