--- a/src/shared/astro/SiteNavigation.astro
+++ b/src/shared/astro/SiteNavigation.astro
@@ -103,7 +103,7 @@ const secondary: any = (preferences as any).header?.secondary_navigation || [];
                         const children =
                             page.children && Object.keys(page.children)?.length;
                         
-                        if (page.status !== "online" && !children && !page.link) return;
+                        if (page.status !== "online" && !children && !page.href) return;
                         
                         const id = `nav-${
                             page.slug ||
@@ -846,6 +846,10 @@ const secondary: any = (preferences as any).header?.secondary_navigation || [];
         }
         
     } */
+    
+    /* #secondary-button {
+        
+    } */
 </style>
 
 <style lang="scss" is:global>
@@ -932,5 +936,54 @@ const secondary: any = (preferences as any).header?.secondary_navigation || [];
 
     li.depth-0 > a span {
         padding: calc(var(--indent) * 0.1) calc(var(--indent) * 0.2);
+    }
+    
+    html:not(.mobile-nav) nav#navigation > #navigation-items > ul.depth-0 {
+        display: grid;
+        /* grid-template-rows: subgrid; */
+        grid-template-rows: 3.6rem 1fr;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: column;
+        grid-row-gap: 0;
+        
+        position:relative;
+        height: var(--header-height);
+        
+        > li.depth-0 {
+            grid-row: 2 / 3;
+            height: 100%;
+        }
+        
+        li#secondary-button {
+            grid-row: 1 / 2;
+            /* grid-column: 1 / span 10; */
+            position: absolute;
+            left: 0;
+            right: 0;
+            
+            > a {
+                display: none;
+                
+            }
+            
+            > #secondary-items {
+                flex-direction: row;
+                writing-mode: horizontal-tb;
+                padding-top: 0;
+                visibility: visible;
+                background-color: transparent;
+                --header-color: 255 255 255;
+                top: 0 !important;
+                width: 100%;
+                justify-content: flex-end;
+                
+                pointer-events: all;
+                
+                li, li a > span {
+                    margin: 0;
+                    /* border: 2px solid red; */
+                }
+            }
+        }
     }
 </style>
