--- a/src/components/image/image.astro
+++ b/src/components/image/image.astro
@@ -27,9 +27,9 @@ const {
     title,
     description,
     alt,
-    height,
+    // height,
     aspect,
-    indent,
+    // indent,
     foreground_color,
     background_color,
     lightbox,
