--- a/src/components/form/inputs/select/select.astro
+++ b/src/components/form/inputs/select/select.astro
@@ -16,7 +16,7 @@ const id = (name || "") + "-" + (key || "");
   <Label for={id} {required}>{label}</Label>
   <select {name} {id} {required} aria-required={required}>
     <option value="">-- Select --</option>
-    {options && options.map((opt, i) => <option value={opt}>{opt}</option>)}
+    {options && options.map((opt) => <option value={opt}>{opt}</option>)}
   </select>
 </div>
 
