--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -117,7 +117,7 @@ const style = {
 };
 
 const file = image?.src || image;
-let metadata, plData;
+let plData;
 
 // @ts-expect-error
 if (!ENV_BOOKSHOP_LIVE && placeholder) {
